# sose-26-hasc

./: .gitignore  CMakeLists.txt  Makefile  MessageSystem.hh  README.md  barrier.cc  data.tgz  hello_mpi.cc  hello_sendrecv.cc  hello_sycl.cc  hello_tbb.cc  jacobi_seq.cc  jacobi_tbb.cc  lu.cc  make.def  matmul_M2.cc  matmul_libraries.cc  matmul_omp.cc  matmul_omp_avx512.cc  matmul_seq_v1.cc  matmul_seq_v2.cc  nbody_M2.cc  nbody_avx.cc  nbody_generate.hh  nbody_intel_SoA.cc  nbody_mpi.cc  nbody_mpi_nonblocking.cc  nbody_mpi_omp.cc  nbody_neon.cc  nbody_omp.cc  nbody_tbb.cc  nbody_tbb_v2.cc  nbody_threads.cc  nbody_vanilla.cc  nbody_vectorized.cc  nbody_vectorized_threaded.cc  nbody_vectorized_threaded_v2.cc  nbody_vectorized_v2.cc  nbody_wasm_SoA.cc  packaged_task.cc  (+10 more)
cppthreads/: Barrier.hh  MessageSystem.hh
exercises/: Makefile
exercises/sheet1/: Makefile
exercises/sheet1/ex1/: cpuinfo.txt  flags.txt
exercises/sheet1/ex3/: Makefile  compiler-flags.cc  start_all.sh  time_experiment.hh
exercises/sheet1/ex4/: Makefile  blas.cc
hello/: Makefile  hello_mpi.cc  hello_openmp.cc  hello_sendrecv.cc  hello_sycl.cc
matmul/: Makefile  matmul_experiment.hh  matmul_omp_armneon.cc  matmul_omp_avx512.cc  matmul_omp_stdsimd.cc  matmul_seq.cc  matmul_sycl.cc
nbody/: Makefile  nbody_armneon_SoA.cc  nbody_generate.hh  nbody_omp_SoA.cc  nbody_omp_armneon_SoA.cc  nbody_omp_intel_SoA.cc  nbody_vanilla.cc
scalar_product/: Makefile  scalar_product_ms.cc  scalar_product_neon.cc  scalar_product_v0.cc  scalar_product_v1.cc  scalar_product_v2.cc  scalar_product_v3.cc  scalar_product_v4.cc  scalar_product_v5.cc
stream/: Makefile
